@@ -1,10 +1,23 @@
 package org.frankframework.insights.label;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 import org.frankframework.insights.common.configuration.properties.GitHubProperties;
 import org.frankframework.insights.common.entityconnection.issuelabel.IssueLabel;
 import org.frankframework.insights.common.entityconnection.issuelabel.IssueLabelRepository;
@@ -20,7 +33,9 @@ import org.frankframework.insights.release.ReleaseService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
@@ -47,21 +62,17 @@ public class LabelServiceTest {
     @Mock
     private GitHubRepositoryStatisticsDTO statisticsDTO;
 
-    private LabelService labelService;
+    @Captor
+    private ArgumentCaptor<LinkedHashSet<Label>> labelSetCaptor;
 
-    private Label labelBug;
-    private Label labelFeature;
-    private Label labelChore;
-    private LabelDTO labelDTO1, labelDTO2;
+    private LabelService labelService;
 
     @BeforeEach
     public void setUp() {
-        List<String> priorityColors = List.of("red");
-        List<String> ignoredColors = List.of("yellow");
+        List<String> includedColors = List.of("D73A4A", "B60205", "007BFF", "1D76DB", "123456");
 
         GitHubProperties gitHubProperties = mock(GitHubProperties.class);
-        when(gitHubProperties.getPriorityLabels()).thenReturn(priorityColors);
-        when(gitHubProperties.getIgnoredLabels()).thenReturn(ignoredColors);
+        when(gitHubProperties.getIncludedLabels()).thenReturn(includedColors);
 
         labelService = new LabelService(
                 statisticsService,
@@ -71,31 +82,10 @@ public class LabelServiceTest {
                 issueLabelRepository,
                 gitHubProperties,
                 releaseService);
-
-        labelBug = new Label();
-        labelBug.setId("l1");
-        labelBug.setName("bug");
-        labelBug.setDescription("Of type bug");
-        labelBug.setColor("red");
-
-        labelFeature = new Label();
-        labelFeature.setId("l2");
-        labelFeature.setName("feature");
-        labelFeature.setDescription("Feature");
-        labelFeature.setColor("blue");
-
-        labelChore = new Label();
-        labelChore.setId("l3");
-        labelChore.setName("chore");
-        labelChore.setDescription("Chore");
-        labelChore.setColor("yellow");
-
-        labelDTO1 = new LabelDTO("l1", "bug", "Of type bug", "red");
-        labelDTO2 = new LabelDTO("l2", "feature", "Feature", "blue");
     }
 
     @Test
-    public void injectLabels_shouldSkipIfCountsEqual() throws GitHubClientException, LabelInjectionException {
+    public void shouldSkipIfLabelCountsAreEqual() throws LabelInjectionException, GitHubClientException {
         when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
         when(statisticsDTO.getGitHubLabelCount()).thenReturn(5);
         when(labelRepository.count()).thenReturn(5L);
@@ -107,18 +97,17 @@ public class LabelServiceTest {
     }
 
     @Test
-    public void injectLabels_shouldSaveAllLabels()
-            throws GitHubClientException, MappingException, LabelInjectionException {
-        Set<LabelDTO> dtos = Set.of(labelDTO1, labelDTO2);
-        Set<Label> entities = Set.of(labelBug, labelFeature);
-        List<Label> saved = List.of(labelBug, labelFeature);
+    public void shouldSaveAllLabelsWhenCountsDiffer() throws Exception {
+        LabelDTO dto1 = new LabelDTO("l1", "bug", "Of type bug", "D73A4A");
+        LabelDTO dto2 = new LabelDTO("l2", "feature", "A new feature", "007BFF");
+        Set<LabelDTO> dtos = Set.of(dto1, dto2);
+        Set<Label> entities = Set.of(createLabel("l1", "bug", "Of type bug", "D73A4A"));
 
         when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
-        when(statisticsDTO.getGitHubLabelCount()).thenReturn(3);
-        when(labelRepository.count()).thenReturn(2L);
+        when(statisticsDTO.getGitHubLabelCount()).thenReturn(10);
+        when(labelRepository.count()).thenReturn(1L);
         when(gitHubClient.getLabels()).thenReturn(dtos);
         when(mapper.toEntity(dtos, Label.class)).thenReturn(entities);
-        when(labelRepository.saveAll(entities)).thenReturn(saved);
 
         labelService.injectLabels();
 
@@ -126,165 +115,165 @@ public class LabelServiceTest {
     }
 
     @Test
-    public void injectLabels_shouldThrowOnException() throws GitHubClientException {
+    public void shouldThrowLabelInjectionException_whenClientFails() throws GitHubClientException {
         when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
         when(statisticsDTO.getGitHubLabelCount()).thenReturn(4);
         when(labelRepository.count()).thenReturn(1L);
-        when(gitHubClient.getLabels()).thenThrow(new GitHubClientException("fail", null));
+        when(gitHubClient.getLabels()).thenThrow(new GitHubClientException("API fetch failed", null));
 
         assertThrows(LabelInjectionException.class, () -> labelService.injectLabels());
     }
 
     @Test
-    public void getHighlightsByReleaseId_shouldReturnOnlyPriorityLabels()
-            throws ReleaseNotFoundException, MappingException {
+    public void shouldThrowLabelInjectionException_whenMappingFails() throws Exception {
+        when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
+        when(statisticsDTO.getGitHubLabelCount()).thenReturn(10);
+        when(labelRepository.count()).thenReturn(0L);
+        when(gitHubClient.getLabels()).thenReturn(Collections.emptySet());
+        when(mapper.toEntity(anySet(), eq(Label.class))).thenThrow(new MappingException("Mapping failed", null));
+
+        assertThrows(LabelInjectionException.class, () -> labelService.injectLabels());
+    }
+
+    @Test
+    public void shouldCorrectlyFilterAndSortLabelsByPopularity() throws Exception {
         Release release = new Release();
         release.setId("r1");
         when(releaseService.checkIfReleaseExists("r1")).thenReturn(release);
+        Label labelBug = createLabel("l1", "bug", "A bug", "D73A4A");
+        Label labelFeature = createLabel("l2", "feature", "Popular feature", "007BFF");
+        Label labelWontfix = createLabel("l3", "wontfix", "Not included", "EEEEEE");
+        Label labelDocs = createLabel("l4", "docs", "Documentation", "1D76DB");
 
-        List<Label> labels = List.of(labelBug, labelFeature);
-        when(labelRepository.findLabelsByReleaseId("r1")).thenReturn(labels);
+        List<Label> releaseLabels = Stream.of(
+                        Collections.nCopies(5, labelFeature),
+                        Collections.nCopies(3, labelDocs),
+                        Collections.nCopies(2, labelBug),
+                        Collections.nCopies(10, labelWontfix))
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
+        when(labelRepository.findLabelsByReleaseId("r1")).thenReturn(releaseLabels);
 
-        Set<LabelResponse> responses = Set.of(new LabelResponse("l1", "bug", "Of type bug", "red"));
-        when(mapper.toDTO(anySet(), eq(LabelResponse.class))).thenReturn(responses);
+        labelService.getHighlightsByReleaseId("r1");
 
-        Set<LabelResponse> result = labelService.getHighlightsByReleaseId("r1");
+        verify(mapper).toDTO(labelSetCaptor.capture(), eq(LabelResponse.class));
+        List<Label> highlights = new ArrayList<>(labelSetCaptor.getValue());
 
-        assertEquals(1, result.size());
-        assertTrue(result.stream().anyMatch(r -> "red".equals(r.color())));
-        verify(mapper).toDTO(anySet(), eq(LabelResponse.class));
+        assertEquals(3, highlights.size(), "Should contain 3 labels after filtering.");
+        assertEquals("l2", highlights.get(0).getId(), "Most popular included label (feature) should be first.");
+        assertEquals("l4", highlights.get(1).getId(), "Second most popular included label (docs) should be second.");
+        assertEquals("l1", highlights.get(2).getId(), "Least popular included label (bug) should be third.");
     }
 
     @Test
-    public void getHighlightsByReleaseId_shouldReturnEmptyIfNoPriorityLabels()
-            throws ReleaseNotFoundException, MappingException {
+    public void shouldHandleCaseInsensitiveColorsForInclusion() throws Exception {
         Release release = new Release();
         release.setId("r2");
         when(releaseService.checkIfReleaseExists("r2")).thenReturn(release);
+        Label includedLower = createLabel("p1", "bugfix", "", "d73a4a");
+        Label notIncluded = createLabel("i1", "duplicate", "", "fBcA04");
+        Label includedValid = createLabel("v1", "Valid", "", "123456");
 
-        List<Label> labels = List.of(labelFeature, labelChore);
+        List<Label> labels = Stream.of(
+                        Collections.nCopies(2, includedValid),
+                        Collections.nCopies(5, notIncluded),
+                        Collections.nCopies(1, includedLower))
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
+
         when(labelRepository.findLabelsByReleaseId("r2")).thenReturn(labels);
 
-        when(mapper.toDTO(anySet(), eq(LabelResponse.class))).thenReturn(Collections.emptySet());
+        labelService.getHighlightsByReleaseId("r2");
 
-        Set<LabelResponse> result = labelService.getHighlightsByReleaseId("r2");
-        assertTrue(result.isEmpty());
+        verify(mapper).toDTO(labelSetCaptor.capture(), eq(LabelResponse.class));
+        List<Label> highlights = new ArrayList<>(labelSetCaptor.getValue());
+
+        assertEquals(2, highlights.size(), "Should contain 2 labels after filtering.");
+        assertEquals("v1", highlights.get(0).getId(), "The more popular included label should be first.");
+        assertEquals("p1", highlights.get(1).getId(), "Label with lowercase color should be included and second.");
     }
 
     @Test
-    public void getHighlightsByReleaseId_shouldReturnEmptyIfNoLabels()
-            throws ReleaseNotFoundException, MappingException {
+    public void shouldLimitToMaxHighlightedLabels() throws Exception {
+        Release release = new Release();
+        release.setId("max");
+        when(releaseService.checkIfReleaseExists("max")).thenReturn(release);
+        List<Label> manyLabels = IntStream.range(0, 20)
+                .mapToObj(i -> createLabel("l" + i, "n" + i, "d" + i, "007BFF"))
+                .collect(Collectors.toList());
+        when(labelRepository.findLabelsByReleaseId("max")).thenReturn(manyLabels);
+
+        labelService.getHighlightsByReleaseId("max");
+
+        verify(mapper).toDTO(labelSetCaptor.capture(), eq(LabelResponse.class));
+        assertEquals(15, labelSetCaptor.getValue().size(), "Result should be limited to 15 labels.");
+    }
+
+    @Test
+    public void shouldReturnEmptySet_whenReleaseHasNoLabels() throws Exception {
         Release release = new Release();
         release.setId("relX");
         when(releaseService.checkIfReleaseExists("relX")).thenReturn(release);
-
         when(labelRepository.findLabelsByReleaseId("relX")).thenReturn(Collections.emptyList());
-        when(mapper.toDTO(new LinkedHashSet<>(), LabelResponse.class)).thenReturn(Collections.emptySet());
 
         Set<LabelResponse> result = labelService.getHighlightsByReleaseId("relX");
+
+        assertTrue(result.isEmpty());
+        verify(mapper, never()).toDTO(anySet(), eq(LabelResponse.class));
+    }
+
+    @Test
+    public void shouldReturnEmptySet_ifNoLabelsAreIncluded() throws Exception {
+        Release release = new Release();
+        release.setId("r_not_included");
+        when(releaseService.checkIfReleaseExists("r_not_included")).thenReturn(release);
+        Label notIncluded1 = createLabel("i1", "ignored1", "desc", "EEEEEE");
+        Label notIncluded2 = createLabel("i2", "ignored2", "desc", "FBCA04");
+
+        when(labelRepository.findLabelsByReleaseId("r_not_included")).thenReturn(List.of(notIncluded1, notIncluded2));
+        when(mapper.toDTO(anySet(), eq(LabelResponse.class))).thenReturn(Collections.emptySet());
+
+        Set<LabelResponse> result = labelService.getHighlightsByReleaseId("r_not_included");
         assertTrue(result.isEmpty());
     }
 
     @Test
-    public void getHighlightsByReleaseId_shouldThrowIfReleaseNotFound() throws ReleaseNotFoundException {
+    public void shouldThrowReleaseNotFoundException() throws ReleaseNotFoundException {
         when(releaseService.checkIfReleaseExists("notfound"))
                 .thenThrow(new ReleaseNotFoundException("Release not found", null));
         assertThrows(ReleaseNotFoundException.class, () -> labelService.getHighlightsByReleaseId("notfound"));
     }
 
     @Test
-    public void getHighlightsByReleaseId_shouldThrowIfMappingFails() throws Exception {
-        Release release = new Release();
-        release.setId("failMap");
-        when(releaseService.checkIfReleaseExists("failMap")).thenReturn(release);
-
-        List<Label> labels = List.of(labelBug);
-        when(labelRepository.findLabelsByReleaseId("failMap")).thenReturn(labels);
-        when(mapper.toDTO(anySet(), eq(LabelResponse.class))).thenThrow(new MappingException("Mapping failed", null));
-
-        assertThrows(MappingException.class, () -> labelService.getHighlightsByReleaseId("failMap"));
-    }
-
-    @Test
-    public void getLabelsByIssueId_shouldReturnLabels() {
+    public void shouldReturnAssociatedLabels() {
+        Label label1 = createLabel("l1", "feature", "desc", "blue");
+        Label label2 = createLabel("l2", "bug", "desc", "red");
         IssueLabel il1 = new IssueLabel();
-        il1.setLabel(labelFeature);
-
+        il1.setLabel(label1);
         IssueLabel il2 = new IssueLabel();
-        il2.setLabel(labelBug);
-
+        il2.setLabel(label2);
         when(issueLabelRepository.findAllByIssue_Id("i1")).thenReturn(Set.of(il1, il2));
+
         Set<Label> result = labelService.getLabelsByIssueId("i1");
+
         assertEquals(2, result.size());
-        assertTrue(result.contains(labelBug));
-        assertTrue(result.contains(labelFeature));
+        assertTrue(result.contains(label1));
+        assertTrue(result.contains(label2));
     }
 
     @Test
-    public void getLabelsByIssueId_shouldReturnEmptyIfNoLabels() {
-        when(issueLabelRepository.findAllByIssue_Id("i99")).thenReturn(Set.of());
+    public void shouldReturnEmptySet_whenNoLabelsFound() {
+        when(issueLabelRepository.findAllByIssue_Id("i99")).thenReturn(Collections.emptySet());
         Set<Label> result = labelService.getLabelsByIssueId("i99");
         assertTrue(result.isEmpty());
     }
 
-    @Test
-    public void saveLabels_shouldLogInfoAndSave()
-            throws GitHubClientException, MappingException, LabelInjectionException {
-        Set<Label> labels = Set.of(labelBug, labelFeature);
-        when(labelRepository.saveAll(labels)).thenReturn(List.of(labelBug, labelFeature));
-
-        when(statisticsService.getGitHubRepositoryStatisticsDTO()).thenReturn(statisticsDTO);
-        when(statisticsDTO.getGitHubLabelCount()).thenReturn(1);
-        when(labelRepository.count()).thenReturn(0L);
-        when(gitHubClient.getLabels()).thenReturn(Set.of(labelDTO1, labelDTO2));
-        when(mapper.toEntity(anySet(), eq(Label.class))).thenReturn(labels);
-
-        labelService.injectLabels();
-
-        verify(labelRepository).saveAll(labels);
-    }
-
-    @Test
-    public void getHighlightsByReleaseId_shouldIgnoreLabelsInIgnoredColors()
-            throws ReleaseNotFoundException, MappingException {
-        Release release = new Release();
-        release.setId("r3");
-        when(releaseService.checkIfReleaseExists("r3")).thenReturn(release);
-
-        List<Label> labels = List.of(labelChore);
-        when(labelRepository.findLabelsByReleaseId("r3")).thenReturn(labels);
-        when(mapper.toDTO(new LinkedHashSet<>(), LabelResponse.class)).thenReturn(Collections.emptySet());
-
-        Set<LabelResponse> result = labelService.getHighlightsByReleaseId("r3");
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    public void getHighlightsByReleaseId_shouldLimitToMaxHighlightedLabels()
-            throws ReleaseNotFoundException, MappingException {
-        Release release = new Release();
-        release.setId("max");
-        when(releaseService.checkIfReleaseExists("max")).thenReturn(release);
-
-        List<Label> manyPriorityLabels = new ArrayList<>();
-        for (int i = 0; i < 20; i++) {
-            Label l = new Label();
-            l.setId("l" + i);
-            l.setName("n" + i);
-            l.setDescription("desc" + i);
-            l.setColor("red");
-            manyPriorityLabels.add(l);
-        }
-        when(labelRepository.findLabelsByReleaseId("max")).thenReturn(manyPriorityLabels);
-
-        Set<Label> expectedFiltered = new LinkedHashSet<>(manyPriorityLabels.subList(0, 15));
-        Set<LabelResponse> responses = new HashSet<>();
-        for (Label l : manyPriorityLabels.subList(0, 15)) {
-            responses.add(new LabelResponse(l.getId(), l.getName(), l.getDescription(), l.getColor()));
-        }
-        when(mapper.toDTO(expectedFiltered, LabelResponse.class)).thenReturn(responses);
-
-        Set<LabelResponse> result = labelService.getHighlightsByReleaseId("max");
-        assertEquals(15, result.size());
+    private Label createLabel(String id, String name, String description, String color) {
+        Label label = new Label();
+        label.setId(id);
+        label.setName(name);
+        label.setDescription(description);
+        label.setColor(color);
+        return label;
     }
 }
